hermes_fuzz_executed_few_shot_v2/fuzz_39_execution
'use strict';

ReactDOM.render(<NativeComponent ref={this} />);


Execution Output ------------------:
test.js:3:17: error: invalid expression (possible JSX: pass -parse-jsx to parse)
ReactDOM.render(<NativeComponent ref={this} />);
                ^
